--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
     <title>COTACAO</title>
     <!--CSS DE ESTILOS-->
 
+	 <script type="text/javascript" src="cordova.js"></script>
+	
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="styles/framework.css" rel="stylesheet" type="text/css">
     <link href="styles/owl.carousel.css" rel="stylesheet" type="text/css">
