--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
     <script type="text/javascript" src="scripts/paginas/rss.js"></script>
     <script type="text/javascript" src="scripts/paginas/cotacao.js"></script>
     <script type="text/javascript" src="scripts/paginas/configrss.js"></script>
-    <!--<script type="text/javascript" src="scripts/paginas/mapa.js"></script>-->
+    <script type="text/javascript" src="scripts/paginas/mapa.js"></script>
 
  
 
