--- a/www/map.html
+++ b/www/map.html
@@ -15,9 +15,9 @@
     <link rel="apple-touch-startup-image" sizes="768x1004" href="images/splash/splash-screen-ipad-portrait.png" media="screen and (min-device-width : 481px) and (max-device-width : 1024px) and (orientation : portrait)" />
     <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png" media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)" />
     <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png" media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)" />-->
-    <title>COTACAO</title>
+    <title></title>
     <!--CSS DE ESTILOS-->
-    <!--<script type="text/javascript" src="cordova.js"></script>-->
+    <script type="text/javascript" src="cordova.js"></script>
 
 
     <link href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" rel="stylesheet" />
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="scripts/jquery.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
+    <script src="scripts/paginas/mapa.js"></script>
     <script type="text/javascript" src="scripts/paginas/map.js"></script>
 
 
@@ -52,7 +53,7 @@
     <div id="map" class="map leaflet-container leaflet-fade-anim" style="position: relative;" tabindex="0"></div>
 
     <script type="text/javascript">
-        jQuery(window).ready(function () {
+        jQuery(document).ready(function () {
             BuscaMapa();
         });
 
