--- a/www/index.html
+++ b/www/index.html
@@ -26,22 +26,20 @@
     <link href="styles/swipebox.css" rel="stylesheet" type="text/css">
     <link href="styles/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="styles/animate.css" rel="stylesheet" type="text/css">
-   
-    <link href="styles/mapa.css" rel="stylesheet" />
 
-   
-   
+    <link href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" rel="stylesheet" />
+    <link href="styles/mapa.css" rel="stylesheet" />
 
     <!--SCRIPTS BASICOS-->
 
     <script type="text/javascript" src="scripts/jquery.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <script src="scripts/leaflet.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/jmodel.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/List.js"></script>
-
-    
+   
     <!--SCRIPTS DE PÁGINAS-->
     
     <script type="text/javascript" src="scripts/paginas/index.js"></script>
