--- a/www/index.html
+++ b/www/index.html
@@ -48,9 +48,9 @@
     <script type="text/javascript" src="scripts/paginas/rss.js"></script>
     <script type="text/javascript" src="scripts/paginas/cotacao.js"></script>
     <script type="text/javascript" src="scripts/paginas/configrss.js"></script>
-    <script type="text/javascript" src="scripts/paginas/mapa.js"></script>
+    <!--<script type="text/javascript" src="scripts/paginas/map.js"></script>-->
 
- 
+
 
 </head>
 <body onload="PreparaSistema('cotacao.html');">
