--- a/www/map.html
+++ b/www/map.html
@@ -17,10 +17,9 @@
     <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png" media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)" />-->
     <title></title>
     <!--CSS DE ESTILOS-->
-    <script type="text/javascript" src="cordova.js"></script>
+    <!--<script type="text/javascript" src="cordova.js"></script>-->
 
-
-    <link href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" rel="stylesheet" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link href="styles/mapa.css" rel="stylesheet" />
 
 
@@ -29,11 +28,10 @@
     <!--SCRIPTS BASICOS-->
 
     <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
     <script src="scripts/jquery-timing.min.js"></script>
-    <script src="scripts/paginas/mapa.js"></script>
-    <script type="text/javascript" src="scripts/paginas/map.js"></script>
+ 
 
 
     <style>
@@ -55,10 +53,12 @@
 
     <script type="text/javascript">
         jQuery(document).ready(function () {
-            BuscaMapa();
-            jQuery('#map').repeat(5000).each(function () { AtualizaMapa(); });
+           //BuscaMapa();
+            jQuery('#map').repeat(5000).each(function () { BuscaMapa();});
         });
 
     </script>
+
+    <script type="text/javascript" src="scripts/paginas/map.js"></script>
 </body>
 </html>
