--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/jmodel.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/List.js"></script>
   
