--- a/www/casasdecambio.html
+++ b/www/casasdecambio.html
@@ -29,8 +29,8 @@
                             </select>
                         </div>-->
                             <div class="formFieldWrap">
-                                <label class="field-title contactEmailField" for="contactEmailField">Data da cotação: </label>
-                                <input type="date" class="contactField" name="DATA_COTACAO" id="DATA_COTACAO" />
+                                <label class="field-title contactEmailField" for="">Casas de Cambio : </label>
+                                <input type="text" class="contactField" name="CASAS_DE_CAMBIO" id="CASAS_DE_CAMBIO" />
                             </div>
                             <!--<div class="formFieldWrap">
                             <label class="field-title contactNameField" for="contactNameField">Nome da moeda: </label>
@@ -60,14 +60,20 @@
             <div class="container">
                 <div class="static-notification tap-dismiss-notification">
                     <div class="toggle-1">
-                        <a href="#" class="deploy-toggle-1 toggle-1-active">Título do post</a>
+                        <a href="#" class="deploy-toggle-1 toggle-1-active">NOME DA CASA</a>
                         <div class="toggle-content" style="overflow: hidden; display: block;">
                             <div class="tab-content tab-content-1">
                                 <div class="one-half-responsive">
                                     <div class="static-notification">
                                         <img src="images/general-nature/1s.jpg" class="float-left" width="75" alt="img">
-                                        Sed sed gravida turpis. Suspendisse quis lacus non lacus
-                                        fermentum lobortis non et orci. Nullam bibendum non ligula ut viverra.
+                                        <p>
+                                            <strong>Contact Information:</strong><br>
+                                            <a href="#" class="contact-call"><i class="fa fa-phone"></i>Phone: + 123 456 7890</a>
+                                            <a href="#" class="contact-text"><i class="fa fa-comments"></i>Message: + 123 456 7890</a>
+                                            <a href="#" class="contact-mail"><i class="fa fa-envelope"></i>Email: mail@doamin.com</a>
+                                            <a href="#" class="contact-facebook"><i class="fa fa-facebook"></i>Fanpage: enabled.labs</a>
+                                            <a href="#" class="contact-twitter"><i class="fa fa-twitter"></i>Twitter: @iEnabled</a>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
