--- a/www/index.html
+++ b/www/index.html
@@ -95,7 +95,7 @@
                 <div class="sidebar-decoration"></div>
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('casasdecambio.html')" class="nav-item">
-                        <i class="fa fa-beer"></i>
+                        <i class="fa fa-money"></i>
                         Casas de cambio
                         <i class="fa fa-circle"></i>
                     </a>
@@ -103,7 +103,7 @@
                 <div class="sidebar-decoration"></div>
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('mapa.html')" class="nav-item">
-                        <i class="fa fa-location-arrow"></i>
+                        <i class="fa fa-map-marker"></i>
                         Mapas
                         <i class="fa fa-circle"></i>
                     </a>
@@ -111,7 +111,7 @@
                 <div class="sidebar-decoration"></div>
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('rss.html')" class="nav-item">
-                        <i class="fa fa-home"></i>
+                        <i class="fa fa-newspaper-o"></i>
                         Notícias
                         <i class="fa fa-circle"></i>
                     </a>
@@ -119,13 +119,11 @@
                 <div class="sidebar-decoration"></div>
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('variacoes.html')" class="nav-item">
-                        <i class="fa fa-home"></i>
+                        <i class="fa fa-area-chart"></i>
                         Variações
                         <i class="fa fa-circle"></i>
                     </a>
                 </div>
-
-
                 <div class="sidebar-decoration"></div>
                 <div class="navigation-item">
                     <a href="#" class="close-nav nav-item">
