--- a/www/index.html
+++ b/www/index.html
@@ -33,8 +33,8 @@
    
 
     <!--SCRIPTS BASICOS-->
-
-    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script src="scripts/jquery-2.1.4.js"></script>
+    <!--<script type="text/javascript" src="scripts/jquery.js"></script>-->
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="sidebar-decoration"></div>
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('casasdecambio.html')" class="nav-item">
+                    <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
                         <i class="fa fa-money"></i>
                         Casas de cambio
                         <i class="fa fa-circle"></i>
