--- a/www/mapa.html
+++ b/www/mapa.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
+    <link href="styles/leaflet.css" rel="stylesheet" />
    
  
 
@@ -19,12 +20,12 @@
             <a onclick="CarregaMenu('cotacao.html')"><i class="fa fa-arrow-left"></i></a>
         </div>
         <div class="header-clear"></div>
-        <div class="decoration"></div>
+        <!--<div class="decoration"></div>-->
         <!--<div class="maps-container">
             <div id="map" class="map leaflet-container leaflet-fade-anim" style="position: relative;" tabindex="0"></div>-->
-            <div class="maps-container">
-                <iframe id="frmmap" src="map.html" class="responsive-image maps" width="1000" height="1000"></iframe>
-            </div>
+        <div class="map leaflet-container ">
+            <iframe id="frmmap" src="teste.html" class="responsive-image maps" height="700"></iframe>
+        </div>
         
         </div>
     
