--- a/www/mapa.html
+++ b/www/mapa.html
@@ -24,7 +24,7 @@
         <!--<div class="maps-container">
             <div id="map" class="map leaflet-container leaflet-fade-anim" style="position: relative;" tabindex="0"></div>-->
         <div class="map leaflet-container ">
-            <iframe id="frmmap" src="teste.html" class="responsive-image maps" height="700"></iframe>
+            <iframe id="frmmap" src="mapas.html" class="responsive-image maps" height="700"></iframe>
         </div>
         
         </div>
