--- a/www/mapas.html
+++ b/www/mapas.html
@@ -1,54 +1,80 @@
 ﻿<!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>Leaflet mobile example</title>
+    <script type="text/javascript" src="cordova.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!--CSS DE ESTILOS-->
+    <!--SCRIPTS BASICOS-->
+    <script src="scripts/jquery-2.1.4.js"></script>
+    <script src="leaflet/leaflet.js"></script>
+    <script src="scripts/jqueryui.js"></script>
 
-    <script type="text/javascript" src="scripts/jquery.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
+    <link href="leaflet/leaflet.css" rel="stylesheet" />
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <!--<link href="styles/framework.css" rel="stylesheet" type="text/css">
+    <link href="styles/owl.theme.css" rel="stylesheet" type="text/css">
+    <link href="styles/swipebox.css" rel="stylesheet" type="text/css">
+    <link href="styles/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="styles/animate.css" rel="stylesheet" type="text/css">-->
 
+
+
+    <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>-->
+
+
+    <style>
+        body {
+            padding: 0;
+            margin: 0;
+        }
+
+        html, body, #map {
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div id="content" class="page-content">
-        <div class="header">
-            <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
-            <em>Notificações</em>
-            <a onclick="CarregaMenu('configrss.html');"><i class="fa fa-cog"></i></a>
-        </div>
+    <div id="map" class="leaflet-container leaflet-touch leaflet-fade-anim" tabindex="0" style="position: relative;">
 
-        <div class="header-clear"></div>
-        <div class="decoration"></div>
-        <div class="content">
-            <!--<div class="one-half-responsive last-column">-->
-            <div class="container" id="rss">
-
-            </div>
-        </div>
     </div>
+
     <script>
-        jQuery(document).ready(function () { BuscaRss(100, 'http://www.infomoney.com.br/mercados/cambio/rss'); })
+        var map = L.map('map');
+
+        L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+            maxZoom: 18,
+            attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+            id: 'vitorcastro.cigoy6vp700eyusm1aljj8ifi',
+            accessToken: 'pk.eyJ1Ijoidml0b3JjYXN0cm8iLCJhIjoiY2lnb3k2d3ZoMDBmMnVzbTFqc3VhajMybSJ9._iZ9ySIFcj7si5opBAwDwA'
+        }).addTo(map);
+
+        function onLocationFound(e) {
+            var ID_ESTABELECIMENTO = 'TESTE DE QUERYSTRING';
+            var radius = e.accuracy / 2;
+            L.marker(e.latlng).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + ID_ESTABELECIMENTO + "' class='' height='260'  weight='200' frameBorder='0'></iframe>").openPopup();
+            //CarregaEstabelecimentos(10);
+            map.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
+        }
+
+        function onLocationError(e) {
+            alert(e.message);
+        }
+
+        map.on('locationfound', onLocationFound);
+        map.on('locationerror', onLocationError);
+
+        map.locate({ setView: true, maxZoom: 16 });
+
+        function CarregaEstabelecimentos(ID_ESTABELECIMENTO) {
+            L.marker(e.latlng).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + ID_ESTABELECIMENTO + "' class='' height='260'  weight='200' frameBorder='0'></iframe>");
+        }
+
     </script>
+
+
 </body>
-
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
