--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
 
 
 </head>
-<body onload="PreparaSistema('cotacao.html');">
+<body onload="PreparaSistema('mapa.html');">
     <!--class="snapjs-left"-->
     <div id="preloader">
         <div id="status">
@@ -70,7 +70,7 @@
                     <a class="close-nav" href="#"><i class="fa fa-times"></i></a>
                 </div>
                 <div class="sidebar-logo">
-                    <img src="img/logo.png" width="128" height="128" />
+                    <img src="images/converter.png" width="128" height="128" />
                 </div>
                 <div class="navigation-item">
                     <a href="#" class="nav-item">
