--- a/www/cotacao.html
+++ b/www/cotacao.html
@@ -28,10 +28,10 @@
                                 <h2>Moeda : </h2>
                                 <select name="" class="contactField" id="MOEDA"></select>
                             </div>
-                            <div class="formFieldWrap">
+                            <!--<div class="formFieldWrap">
                                 <h2>Data da cotação: </h2>
                                 <input type="date" class="contactField" name="DATA_COTACAO" id="DATA_COTACAO" />
-                            </div>
+                            </div>-->
                         </fieldset>
                     </div>
                 </div>
