--- a/www/index.html
+++ b/www/index.html
@@ -80,7 +80,7 @@
                     </a>
                 </div>
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('cotacao.html')" class="nav-item">
+                    <a onclick="CarregaMenu('mapa.html')" class="nav-item">
                         <i class="fa fa-home"></i>
                         Inicial
                         <i class="fa fa-circle"></i>
