--- a/www/mapas.html
+++ b/www/mapas.html
@@ -9,19 +9,10 @@
     <script src="scripts/jquery-2.1.4.js"></script>
     <script src="leaflet/leaflet.js"></script>
     <script src="scripts/jqueryui.js"></script>
-
+    <script src="scripts/jsmodel/wscotacao.js"></script>
     <link href="leaflet/leaflet.css" rel="stylesheet" />
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <!--<link href="styles/framework.css" rel="stylesheet" type="text/css">
-    <link href="styles/owl.theme.css" rel="stylesheet" type="text/css">
-    <link href="styles/swipebox.css" rel="stylesheet" type="text/css">
-    <link href="styles/font-awesome.css" rel="stylesheet" type="text/css">
-    <link href="styles/animate.css" rel="stylesheet" type="text/css">-->
 
-
-
-    <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>-->
 
 
     <style>
@@ -53,11 +44,12 @@
         }).addTo(map);
 
         function onLocationFound(e) {
-            var ID_ESTABELECIMENTO = 'TESTE DE QUERYSTRING';
+           // var ID_ESTABELECIMENTO = 'TESTE DE QUERYSTRING';
             var radius = e.accuracy / 2;
-            L.marker(e.latlng).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + ID_ESTABELECIMENTO + "' class='' height='260'  weight='200' frameBorder='0'></iframe>").openPopup();
-            //CarregaEstabelecimentos(10);
+            L.marker(e.latlng).addTo(map).bindPopup("Você está aqui!").openPopup();
+            CarregaEstabelecimentos();
             map.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
+            //L.marker([e.latlng.lat, e.latlng.lng]).addTo(map).bindPopup(MontaMapa(null));
         }
 
         function onLocationError(e) {
@@ -69,10 +61,22 @@
 
         map.locate({ setView: true, maxZoom: 16 });
 
-        function CarregaEstabelecimentos(ID_ESTABELECIMENTO) {
-            L.marker(e.latlng).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + ID_ESTABELECIMENTO + "' class='' height='260'  weight='200' frameBorder='0'></iframe>");
+        function CarregaEstabelecimentos() {
+            var data = jQuery.parseJSON(RetornaListaEstabelecimentos(null, null));
+            if (data.length > 0) {
+                jQuery.each(data, function () {
+                    L.marker([data.LATITUDE, data.LONGITUDE]).addTo(map).bindPopup(MontaMapa(data));
+                });
+
+            }
+
+
         }
 
+        function MontaMapa(data) {
+
+            L.marker([data.LATITUDE, data.LONGITUDE]).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + data.ID_ESTABELECIMENTO + "' class='' height='260'  weight='200' frameBorder='0'></iframe>");
+        }
     </script>
 
 
