--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -17,31 +17,20 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <em>Casas de Cambio</em>
-            <a onclick="BuscarEstabelecimento('TESTE QUERY STRING APP IFRAME',jQuery('#MOEDA').val());"><i class="fa fa-search"></i></a>
+            <a  href="#"><i class="fa fa-search"></i></a>
+            <!--<a onclick="BuscarEstabelecimento(jQuery('#MOEDA').val());"><i class="fa fa-search"></i></a>-->
         </div>
 
         <div class="header-clear"></div>
         <div class="decoration"></div>
         <div class="content">
-            <!--<div class="container no-bottom">
-                <div class="no-bottom">
-                    <div>
-                        <fieldset>
-                            <div class="formFieldWrap">
-                                <label class="field-title contactEmailField" for="">Casas de Cambio : </label>
-                                <input type="text" class="contactField" name="ESTABELECIMENTO" id="ESTABELECIMENTO" />
-                            </div>
-                        </fieldset>
-                    </div>
-                </div>
-            </div>-->
             <div class="container no-bottom">
                 <div class="no-bottom">
                     <div>
                         <fieldset>
                             <div class="formFieldWrap">
                                 <h2>Moeda : </h2>
-                                <select name="" class="contactField" id="MOEDA" onchange="BuscarEstabelecimento('TESTE_QUERY_STRING_APP_IFRAME',this.value)"></select>
+                                <select name="" class="contactField" id="MOEDA" onchange="BuscarEstabelecimento(this.value)"></select>
                             </div>
                         </fieldset>
                     </div>
