--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -30,7 +30,7 @@
                         <fieldset>
                             <div class="formFieldWrap">
                                 <h2>Moeda : </h2>
-                                <select name="" class="contactField" id="MOEDA" onchange="BuscarEstabelecimento(this.value)"></select>
+                                <select name="" class="contactField" id="MOEDA" onchange="BuscarEstabelecimento(this.value)" style="border-radius:30px"></select>
                             </div>
                         </fieldset>
                     </div>
