--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,7 @@
                     <a onclick="CarregaMenu('buscaramigos.html')"><i class="fa fa-search-plus"></i></a>-->
                     <a class="close-nav" href="#"><i class="fa fa-times"></i></a>
                 </div>
-                <div class="sidebar-logo">
+                <!--<div class="sidebar-logo">
                     <img src="images/converter.png" width="128" height="128" />
                 </div>
                 <div class="navigation-item">
@@ -78,11 +78,11 @@
                         MENU
                         <i class="fa"></i>
                     </a>
-                </div>
+                </div>-->
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('mapa.html')" class="nav-item">
+                    <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
                         <i class="fa fa-home"></i>
-                        Inicial
+                        Mapa
                         <i class="fa fa-circle"></i>
                     </a>
                 </div>
@@ -90,7 +90,7 @@
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
                         <i class="fa fa-money"></i>
-                        Casas de cambio
+                        Busca
                         <i class="fa fa-circle"></i>
                     </a>
                 </div>
@@ -98,7 +98,7 @@
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('mapa.html')" class="nav-item">
                         <i class="fa fa-map-marker"></i>
-                        Mapas
+                        Meus Dados
                         <i class="fa fa-circle"></i>
                     </a>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('rss.html')" class="nav-item">
                         <i class="fa fa-newspaper-o"></i>
-                        Notícias
+                        Endereço
                         <i class="fa fa-circle"></i>
                     </a>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('variacoes.html')" class="nav-item">
                         <i class="fa fa-area-chart"></i>
-                        Variações
+                        Histórico
                         <i class="fa fa-circle"></i>
                     </a>
                 </div>
