--- a/www/mapa.html
+++ b/www/mapa.html
@@ -19,7 +19,7 @@
             <em>Mapa</em>
             <a onclick="CarregaMenu('cotacao.html')"><i class="fa fa-arrow-left"></i></a>
         </div>
-        <div class="header-clear"></div>
+        <!--<div class="header-clear"></div>-->
         <!--<div class="decoration"></div>-->
         <!--<div class="maps-container">
             <div id="map" class="map leaflet-container leaflet-fade-anim" style="position: relative;" tabindex="0"></div>-->
