--- a/www/cotacao.html
+++ b/www/cotacao.html
@@ -14,7 +14,7 @@
     <div id="content" class="page-content">
         <div class=" header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
-            <em>Cotação do dia</em>
+            <em> eXCHANGE </em>
             <a onclick="BuscaValores();"><i class="fa fa-check"></i></a>
         </div>
         <div class="header-clear"></div>
