--- a/www/login.html
+++ b/www/login.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-startup-image" sizes="768x1004" href="images/splash/splash-screen-ipad-portrait.png" media="screen and (min-device-width : 481px) and (max-device-width : 1024px) and (orientation : portrait)" />
     <link rel="apple-touch-startup-image" sizes="1536x2008" href="images/splash/splash-screen-ipad-portrait-retina.png" media="(device-width: 768px)	and (orientation: portrait)	and (-webkit-device-pixel-ratio: 2)" />
     <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png" media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)" />
-    <title>CERVEJEIRO</title>
+    <title>eXCHANGE</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="styles/framework.css" rel="stylesheet" type="text/css">
     <link href="styles/owl.carousel.css" rel="stylesheet" type="text/css">
@@ -30,13 +30,10 @@
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
-    <script type="text/javascript" src="scripts/jsmodel/jmodel.js"></script>
-    <script type="text/javascript" src="scripts/jsmodel/List.js"></script>
-
-
+    <script type="text/javascript" src="scripts/paginas/login.js"></script>
+   
 </head>
 <body>
-
     <div id="preloader">
         <div id="status">
             <p class="center-text">
@@ -49,7 +46,7 @@
         <div class="header">
             <!--<a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>-->
             <a onclick="Registrar();"><i class="fa  fa-pencil"></i></a>
-            <em> Cervejeiros </em>
+            <a class="header-logo">eXCHANGE</a>
             <a onclick="BuscaLogin();"><i class="fa fa-sign-in"></i></a>
         </div>
         <div class="header-clear"></div>
@@ -68,22 +65,13 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <div class="formFieldWrap">
-                                <h3><label class="field-title contactNameField" for="contactNameField">Email : </label></h3>
-                                <input type="email" name="contactNameField" value="" class="contactField" id="NOME_USUARIO" />
-                            </div>
-                            <p> </p>
-                            <div class="formFieldWrap">
-                                <h3> <label class="field-title contactNameField" for="contactNameField">Senha : </label></h3>
-                                <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" />
-                            </div>
-                            <div class="one-third-responsive last-column full-bottom ">
-                            </div>
+                            <label class="input-label">Entrar</label>
+                            <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required />
+                            <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required />
                         </fieldset>
                     </div>
                 </div>
             </div>
-            <!--</div>-->
         </div>
 
     </div>
