--- a/www/mapa.html
+++ b/www/mapa.html
@@ -13,16 +13,19 @@
 
 </head>
 <body>
+
     <div id="content" class="page-content">
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
-            <em>Mapa</em>
+            <a class="header-logo">eXCHANGE</a>
             <a onclick="CarregaMenu('cotacao.html')"><i class="fa fa-arrow-left"></i></a>
         </div>
         <!--<div class="header-clear"></div>-->
         <!--<div class="decoration"></div>-->
         <!--<div class="maps-container">
             <div id="map" class="map leaflet-container leaflet-fade-anim" style="position: relative;" tabindex="0"></div>-->
+        <br />
+        <br />
         <div class="map leaflet-container ">
             <iframe id="frmmap" src="mapas.html" class="responsive-image maps" height="700"></iframe>
         </div>
