--- a/www/mapas.html
+++ b/www/mapas.html
@@ -77,8 +77,13 @@
 
             L.marker([data.LATITUDE, data.LONGITUDE]).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + data.ID_ESTABELECIMENTO + "' class='' height='260'  weight='200' frameBorder='0'></iframe>");
         }
-    </script>
 
+        //jQuery(document).ready(function () {
+        //    //BuscaMapa();
+        //    jQuery('#map').repeat(5000).each(function () { BuscaMapa(); });
+        //});
+
+    </script>
 
 </body>
 </html>
