--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -3,45 +3,109 @@
 
 <head>
     <title></title>
-    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script src="scripts/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
-
+    
 </head>
 <body>
     <div id="content" class="page-content">
         <script>
-             var ID_ESTABELECIMENTO = 'TESTE DE QUERYSTRING';
+            var ID_ESTABELECIMENTO = 'TESTE DE QUERYSTRING';
         </script>
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
-            <em>Casas de Cambio</em>
-            <a  href="#"><i class="fa fa-search"></i></a>
-            <!--<a onclick="BuscarEstabelecimento(jQuery('#MOEDA').val());"><i class="fa fa-search"></i></a>-->
+            <a class="header-logo">eXCHANGE</a>
+            <a onclick="BuscarEstabelecimento(jQuery('#MOEDA_PROCURA').val());"><i class="fa fa-search"></i></a>
         </div>
-
-        <div class="header-clear"></div>
-        <div class="decoration"></div>
+        <br />
+        <br />
+        <br />
+        <br />
+        <!--<div class="decoration"></div>-->
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div>
+                    <fieldset>
+                        <label class="input-label">Busca</label>
+                        <!--<label class="input-label">Sua moeda</label>-->
+                        <select name="" class="contactField" id="SUA_MOEDA"></select>
+                        <!--<label class="input-label">Qual procura?</label>-->
+                        <select name="" class="contactField" id="MOEDA_PROCURA"></select>
+                        <!--<label class="input-label">Qual é a transação?</label>-->
+                        <select name="" class="contactField" id="TRANSACAO"></select>
+                    </fieldset>
+                </div>
+            </div>
+        </div>
+        <br />
+        <br />
+        <div id="DIVESTABELECIMENTO" class="container">
+            <div class="content">
+                <div class="container no-bottom">
+                    <div class="no-bottom">
                         <fieldset>
-                            <div class="formFieldWrap">
-                                <h2>Moeda : </h2>
-                                <select name="" class="contactField" id="MOEDA" onchange="BuscarEstabelecimento(this.value)" style="border-radius:30px"></select>
+                            <div class="big-notification static-notification-white">
+                                <strong><label class="busca-text"> Nome do estabelecimento muito grande ltda </label></strong>
+                                <div class="one-half">
+                                    <label class="contact-text"> telefone </label>
+                                    <label class="contact-text">R$: 4,00</label>
+                                </div>
+                                <div class="two-half last-column">
+                                    <span class="span-stars">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star-o"></i>
+                                    </span>
+                                    <label class="contact-text">0.6 km</label>
+                                </div>
+                            </div>
+                            <div class="big-notification static-notification-white">
+                                <strong><label class="busca-text"> Nome do estabelecimento muito grande ltda </label></strong>
+                                <div class="one-half">
+                                    <label class="contact-text"> telefone </label>
+                                    <label class="contact-text">R$: 4,00</label>
+                                </div>
+                                <div class="two-half last-column">
+                                    <span class="span-stars">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star-o"></i>
+                                    </span>
+                                    <label class="contact-text">0.6 km</label>
+                                </div>
+                            </div>
+                            <div class="big-notification static-notification-white">
+                                <strong><label class="busca-text"> Nome do estabelecimento muito grande ltda </label></strong>
+                                <div class="one-half">
+                                    <label class="contact-text"> telefone </label>
+                                    <label class="contact-text">R$: 4,00</label>
+                                </div>
+                                <div class="two-half last-column">
+                                    <span class="span-stars">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star-o"></i>
+                                    </span>
+                                    <label class="contact-text">0.6 km</label>
+                                </div>
                             </div>
                         </fieldset>
                     </div>
                 </div>
             </div>
-            <div id="DIVESTABELECIMENTO" class="container">
-
-            </div>
         </div>
+        <script src="scripts/jsmodel/moedas.js"></script>
+        <script src="scripts/jsmodel/transacao.js"></script>
         <script src="scripts/paginas/estabelecimento.js"></script>
-    </div>
+        </div>
 </body>
 
 </html>
