--- a/www/index.html
+++ b/www/index.html
@@ -51,8 +51,9 @@
 </head>
 <body onload="PreparaSistema('mapa.html');">
     <!--class="snapjs-left"-->
-    <div id="preloader">
+    <div id="preloader" class="preloader">
         <div id="status">
+            <img src="images/LOGO_eXCHANGE_BRANCO.png" width="128" height="70" />
             <p class="center-text">
                 Carregando...
                 <em>O carregamento depende da sua conexão!</em>
@@ -67,63 +68,90 @@
                     <a onclick="CarregaMenu('favoritas.html')"><i class="fa fa-star-o"></i></a>
                     <a onclick="CarregaMenu('amigos.html')"><i class="fa fa-users"></i></a>
                     <a onclick="CarregaMenu('buscaramigos.html')"><i class="fa fa-search-plus"></i></a>-->
-                    <a class="close-nav" href="#"><i class="fa fa-times"></i></a>
+                    <!--<a class="close-nav" href="#"><i class="fa fa-times"></i></a>-->
                 </div>
-                <!--<div class="sidebar-logo">
-                    <img src="images/converter.png" width="128" height="128" />
+                <div class="sidebar-logo">
+                    <img src="images/LOGO_eXCHANGE_BRANCO.png" width="128" height="70" />
                 </div>
-                <div class="navigation-item">
-                    <a href="#" class="nav-item">
+                <!--<div class="navigation-item">
+                    <a onclick="PreencheMapa()" class="nav-item">
                         <i class="fa fa-navicon"></i>
                         MENU
                         <i class="fa"></i>
                     </a>
                 </div>-->
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
-                        <i class="fa fa-home"></i>
-                        Mapa
-                        <i class="fa fa-circle"></i>
-                    </a>
-                </div>
-                <div class="sidebar-decoration"></div>
-                <div class="navigation-item">
-                    <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
-                        <i class="fa fa-money"></i>
-                        Busca
-                        <i class="fa fa-circle"></i>
-                    </a>
-                </div>
-                <div class="sidebar-decoration"></div>
-                <div class="navigation-item">
                     <a onclick="CarregaMenu('mapa.html')" class="nav-item">
                         <i class="fa fa-map-marker"></i>
-                        Meus Dados
-                        <i class="fa fa-circle"></i>
+                        Mapa
+                        <i class="fa"></i>
                     </a>
                 </div>
-                <div class="sidebar-decoration"></div>
+                <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('rss.html')" class="nav-item">
-                        <i class="fa fa-newspaper-o"></i>
-                        Endereço
-                        <i class="fa fa-circle"></i>
+                    <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
+                        <i class="fa fa-search"></i>
+                        Busca
+                        <i class="fa" ></i>
                     </a>
                 </div>
-                <div class="sidebar-decoration"></div>
+                <!--<div class="sidebar-decoration"></div>-->
+                <div class="navigation-item">
+                    <a onclick="CarregaMenu('perfil.html')" class="nav-item">
+                        <i class="fa fa-user"></i>
+                        Meus Dados
+                        <i class="fa"></i>
+                    </a>
+                </div>
+                <!--<div class="sidebar-decoration"></div>-->
+                <div class="navigation-item">
+                    <a onclick="CarregaMenu('endereco.html')" class="nav-item">
+                        <i class="fa fa-building"></i>
+                        Endereço
+                        <i class="fa"></i>
+                    </a>
+                </div>
+                <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('variacoes.html')" class="nav-item">
-                        <i class="fa fa-area-chart"></i>
+                        <i class="fa fa-clock-o"></i>
                         Histórico
-                        <i class="fa fa-circle"></i>
+                        <i class="fa"></i>
                     </a>
                 </div>
-                <div class="sidebar-decoration"></div>
+                <!--<div class="sidebar-decoration"></div>-->
+                <div class="navigation-item">
+                    <a href="#" class="close-nav nav-item">
+                        <i class="fa fa-area-chart"></i>
+                        Avaliações
+                        <i class="fa"></i>
+                    </a>
+                </div>
+                <div class="sidebar-breadcrumb">
+                <br />
+                <br />
+                    <br />
+                    <br />
+                </div>
+                <div class="navigation-item">
+                    <a href="#" class="close-nav nav-item">
+                        <i class="fa fa-cog"></i>
+                        Opções
+                        <i class="fa"></i>
+                    </a>
+                </div>
+                <div class="navigation-item">
+                    <a href="#" class="close-nav nav-item">
+                        <i class="fa fa-envelope"></i>
+                        Fale Conosco
+                        <i class="fa"></i>
+                    </a>
+                </div>
                 <div class="navigation-item">
                     <a href="#" class="close-nav nav-item">
                         <i class="fa fa-sign-out"></i>
-                        Fechar
-                        <i class="fa fa-circle"></i>
+                        Sair
+                        <i class="fa"></i>
                     </a>
                 </div>
             </div>
