--- a/www/variacoes.html
+++ b/www/variacoes.html
@@ -12,7 +12,7 @@
     <div id="content" class="page-content">
         <div class=" header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
-            <em> Gráficos </em>
+            <a class="header-logo">eXCHANGE</a>
             <a onclick="BuscaValores();"><i class="fa fa-check"></i></a>
         </div>
         <div class="header-clear"></div>
