--- a/www/login.html
+++ b/www/login.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
     <script type="text/javascript" src="scripts/paginas/login.js"></script>
-   
+
 </head>
 <body>
     <div id="preloader">
@@ -73,17 +73,15 @@
                 </div>
             </div>
         </div>
-
+        <script>
+            jQuery(document).ready(function() {
+                CarregaLogin();
+            })
+        </script>
     </div>
 </body>
 
 </html>
-
-
-
-
-
-
 
 
 
