--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <title>COTACAO</title>
     <!--CSS DE ESTILOS-->
 
-	 <script type="text/javascript" src="cordova.js"></script>
+	 <!--<script type="text/javascript" src="cordova.js"></script>-->
 	
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="styles/framework.css" rel="stylesheet" type="text/css">
@@ -29,7 +29,7 @@
 
     <!--SCRIPTS BASICOS-->
     <script src="scripts/jquery-2.1.4.js"></script>
-    <!--<script type="text/javascript" src="scripts/jquery.js"></script>-->
+
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
