--- a/www/perfil.html
+++ b/www/perfil.html
@@ -11,9 +11,6 @@
 </head>
 <body>
     <div id="content" class="page-content">
-        <script>
-            var ID_ESTABELECIMENTO = 'TESTE DE QUERYSTRING';
-        </script>
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
@@ -30,17 +27,18 @@
                         <fieldset>
                             <label class="input-label">Meus dados</label>
 
-                            <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" required />
+                            <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" required readonly="readonly" />
 
-                            <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required />
+                            <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required readonly="readonly" />
+
+                            <input type="email" name="contactNameField" value="" class="contactField  " id="DATA_CADASTRO" placeholder="Data de Cadastro" required readonly="readonly" />
 
                             <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required />
 
                             <input type="password" name="contactNameField" value="" class="contactField" id="CONFIRMA_SENHA" placeholder="Confirme sua senha" required />
 
-                            <label class="input-label">Moeda base</label>
-
-                            <select name="" class="contactField" id="SUA_MOEDA"></select>
+                            <!--<label class="input-label">Moeda base</label>
+                            <select name="" class="contactField" id="SUA_MOEDA"></select>-->
 
                         </fieldset>
                     </div>
@@ -50,8 +48,7 @@
         <br />
         <br />
     </div>
-
-
+    <script src="scripts/paginas/perfil.js"></script>
 </body>
 
 </html>
